# MABE

./: .gitignore  README.md  modules.txt  settings.cfg  settings_organism.cfg  settings_world.cfg
code/World/PhysicsWorld/: CMakeLists.txt  PhysicsWorld.cpp  PhysicsWorld.h  README.md
code/World/tictactoeWorld/: CMakeLists.txt  tictactoeWorld.cpp  tictactoeWorld.h
code/World/twenty48World/: CMakeLists.txt  README.md  twenty48World.cpp  twenty48World.h
execs/: Physics.sh  README.md  tictactoe.sh  twenty48.sh
settings/: README.md
settings/Physics/: settings_organism.cfg
settings/tictactoe/: settings.cfg  settings_organism.cfg  settings_world.cfg
settings/twenty48/: settings.cfg
tools/: mgraph_max.py
